feat(account): add user data lifecycle
